# cmake_learning

./: README.md
cmake_library_example/: CMakeLists.txt  main.c
cmake_library_example/examples/: CMakeLists.txt  main.c
cmake_library_example/include/: CMakeLists.txt
cmake_library_example/include/adder/: adder.h
cmake_library_example/src/: CMakeLists.txt  adder.c
cmake_with_tests/: CMakeLists.txt
cmake_with_tests/tests/: CMakeLists.txt
simple_cmake_example/: CMakeLists.txt  main.c
